--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,5 @@
 body {
-    background-image:
-        url('/img/CNZW/background.png'),
-        url('https://raw.bgithub.xyz/CNZWBYWTW/www/main/img/CNZW/background.png'),
-        url('https://cdn.jsdelivr.net/gh/CNZWBYWTW/www/img/CNZW/background.png');
+    background-image: url('/img/CNZW/background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
